<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.justin.myapp3.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bettingRed"

        android:elevation="4dp"

        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/ResultImage"
        android:layout_width="192dp"
        android:layout_height="159dp"
        android:layout_marginTop="124dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice" />

    <Button
        android:id="@+id/BlackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="PlayRound"
        android:text="@string/Black_Button"
        app:layout_constraintEnd_toStartOf="@+id/RedButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/RedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="PlayRound"
        android:text="@string/Red_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/BlackButton"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/Balance"
        android:layout_width="106dp"
        android:layout_height="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="Balance:"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Bet"
        android:layout_width="85dp"
        android:layout_height="39dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="0"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/ResultText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="137dp"
        android:layout_height="33dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/EnterAmountText"
        app:layout_constraintEnd_toStartOf="@+id/Bet"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResultText" />

    <TextView
        android:id="@+id/ResultText"
        android:layout_width="137dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResultImage" />

    <Button
        android:id="@+id/ResetButton"
        android:layout_width="70dp"
        android:layout_height="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="72dp"
        android:onClick="onReset"
        android:text="@string/ResetButtonText"
        android:textSize="10sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ProfitBox"
        android:layout_width="106dp"
        android:layout_height="21dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="Gain/Loss: $0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Balance" />


</android.support.constraint.ConstraintLayout>
